{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 2717,
  "lineage": "a405c56f-c93b-7cf0-26f0-72c6b773f470",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:206177862976:security-group/sg-0b94119fc407bd0be",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0b94119fc407bd0be",
            "ingress": [],
            "name": "ticketing-cluster-cluster-2025030509134619560000000f",
            "name_prefix": "ticketing-cluster-cluster-",
            "owner_id": "206177862976",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-cluster"
            },
            "tags_all": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-014427ed60b6e5278"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:206177862976:security-group/sg-067ce34dff8733b11",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-067ce34dff8733b11",
            "ingress": [],
            "name": "ticketing-cluster-node-20250305091346197000000010",
            "name_prefix": "ticketing-cluster-node-",
            "owner_id": "206177862976",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-node",
              "karpenter.sh/discovery": "ticketing-cluster",
              "kubernetes.io/cluster/ticketing-cluster": "owned"
            },
            "tags_all": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-node",
              "karpenter.sh/discovery": "ticketing-cluster",
              "kubernetes.io/cluster/ticketing-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-014427ed60b6e5278"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1560782298",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b94119fc407bd0be",
            "security_group_rule_id": "sgr-075b476332a390170",
            "self": false,
            "source_security_group_id": "sg-067ce34dff8733b11",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3314918046",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-067ce34dff8733b11",
            "security_group_rule_id": "sgr-0fb7b0d186cfe2a58",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3709365474",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-067ce34dff8733b11",
            "security_group_rule_id": "sgr-0422b919121eb9288",
            "self": false,
            "source_security_group_id": "sg-0b94119fc407bd0be",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3759049246",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-067ce34dff8733b11",
            "security_group_rule_id": "sgr-039962d46b972712f",
            "self": false,
            "source_security_group_id": "sg-0b94119fc407bd0be",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-692907400",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-067ce34dff8733b11",
            "security_group_rule_id": "sgr-0fd3012fdfcee82b6",
            "self": false,
            "source_security_group_id": "sg-0b94119fc407bd0be",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-974180777",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-067ce34dff8733b11",
            "security_group_rule_id": "sgr-08674599ed75e9716",
            "self": false,
            "source_security_group_id": "sg-0b94119fc407bd0be",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1588716130",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-067ce34dff8733b11",
            "security_group_rule_id": "sgr-0ba69fb80b42c4103",
            "self": false,
            "source_security_group_id": "sg-0b94119fc407bd0be",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2852686202",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-067ce34dff8733b11",
            "security_group_rule_id": "sgr-008b02a8cc9a9fb9a",
            "self": false,
            "source_security_group_id": "sg-0b94119fc407bd0be",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-4156889567",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-067ce34dff8733b11",
            "security_group_rule_id": "sgr-0b7548c7e840c0698",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3767515218",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-067ce34dff8733b11",
            "security_group_rule_id": "sgr-0d9bac8120ae6378b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1154489277",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-067ce34dff8733b11",
            "security_group_rule_id": "sgr-02c6ed452477265d1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:206177862976:network-acl/acl-0fbe24ebdc5331ade",
            "default_network_acl_id": "acl-0fbe24ebdc5331ade",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fbe24ebdc5331ade",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "206177862976",
            "subnet_ids": [
              "subnet-0112b893838bb9b72",
              "subnet-0135df98428033a0c",
              "subnet-0206f32c2ebb5e5d0",
              "subnet-02affdb65c68be4da",
              "subnet-062698c02ca8b5427"
            ],
            "tags": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-default"
            },
            "tags_all": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-default"
            },
            "vpc_id": "vpc-014427ed60b6e5278"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:206177862976:route-table/rtb-072c4cd4a0f3a32a2",
            "default_route_table_id": "rtb-072c4cd4a0f3a32a2",
            "id": "rtb-072c4cd4a0f3a32a2",
            "owner_id": "206177862976",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-default"
            },
            "tags_all": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-014427ed60b6e5278"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:206177862976:security-group/sg-073ff0969ea36db18",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-073ff0969ea36db18",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "206177862976",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-default"
            },
            "tags_all": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-default"
            },
            "vpc_id": "vpc-014427ed60b6e5278"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08749ceabcdcbd292",
            "arn": "arn:aws:ec2:ap-northeast-2:206177862976:elastic-ip/eipalloc-08749ceabcdcbd292",
            "domain": "vpc",
            "id": "eipalloc-08749ceabcdcbd292",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-164-77-1.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.77.1",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-ap-northeast-2a"
            },
            "tags_all": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-ap-northeast-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:206177862976:internet-gateway/igw-003605751c6b972aa",
            "id": "igw-003605751c6b972aa",
            "owner_id": "206177862976",
            "tags": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc"
            },
            "tags_all": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc"
            },
            "vpc_id": "vpc-014427ed60b6e5278"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08749ceabcdcbd292",
            "association_id": "eipassoc-0a295cda24dbb797f",
            "connectivity_type": "public",
            "id": "nat-0575b3f104ef8fc5f",
            "network_interface_id": "eni-07b2bf596f35ee6be",
            "private_ip": "10.0.48.203",
            "public_ip": "15.164.77.1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0206f32c2ebb5e5d0",
            "tags": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-ap-northeast-2a"
            },
            "tags_all": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-ap-northeast-2a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0aa4d454e4bbb72eb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0575b3f104ef8fc5f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aa4d454e4bbb72eb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-003605751c6b972aa",
            "id": "r-rtb-01526aab4da3776071080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01526aab4da377607",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:206177862976:route-table/rtb-0aa4d454e4bbb72eb",
            "id": "rtb-0aa4d454e4bbb72eb",
            "owner_id": "206177862976",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-private"
            },
            "tags_all": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-014427ed60b6e5278"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:206177862976:route-table/rtb-01526aab4da377607",
            "id": "rtb-01526aab4da377607",
            "owner_id": "206177862976",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-public"
            },
            "tags_all": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-014427ed60b6e5278"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b1cf6aa4267bb1e",
            "route_table_id": "rtb-0aa4d454e4bbb72eb",
            "subnet_id": "subnet-0135df98428033a0c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06af193b9eb9790dc",
            "route_table_id": "rtb-0aa4d454e4bbb72eb",
            "subnet_id": "subnet-02affdb65c68be4da"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0add74bbbafb1b7b0",
            "route_table_id": "rtb-0aa4d454e4bbb72eb",
            "subnet_id": "subnet-04fb31a79ce3795ea"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07760b6882672296f",
            "route_table_id": "rtb-01526aab4da377607",
            "subnet_id": "subnet-0206f32c2ebb5e5d0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b4c40b65302c29c",
            "route_table_id": "rtb-01526aab4da377607",
            "subnet_id": "subnet-0112b893838bb9b72"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00487501e31b5949d",
            "route_table_id": "rtb-01526aab4da377607",
            "subnet_id": "subnet-062698c02ca8b5427"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:206177862976:subnet/subnet-0135df98428033a0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0135df98428033a0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "206177862976",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-private-ap-northeast-2a",
              "karpenter.sh/discovery": "ticketing-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-private-ap-northeast-2a",
              "karpenter.sh/discovery": "ticketing-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-014427ed60b6e5278"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:206177862976:subnet/subnet-02affdb65c68be4da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02affdb65c68be4da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "206177862976",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-private-ap-northeast-2b",
              "karpenter.sh/discovery": "ticketing-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-private-ap-northeast-2b",
              "karpenter.sh/discovery": "ticketing-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-014427ed60b6e5278"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:206177862976:subnet/subnet-04fb31a79ce3795ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fb31a79ce3795ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "206177862976",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-private-ap-northeast-2c",
              "karpenter.sh/discovery": "ticketing-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-private-ap-northeast-2c",
              "karpenter.sh/discovery": "ticketing-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-014427ed60b6e5278"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:206177862976:subnet/subnet-0206f32c2ebb5e5d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0206f32c2ebb5e5d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "206177862976",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-public-ap-northeast-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-public-ap-northeast-2a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-014427ed60b6e5278"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:206177862976:subnet/subnet-0112b893838bb9b72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0112b893838bb9b72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "206177862976",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-public-ap-northeast-2b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-public-ap-northeast-2b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-014427ed60b6e5278"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:206177862976:subnet/subnet-062698c02ca8b5427",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062698c02ca8b5427",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "206177862976",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-public-ap-northeast-2c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc-public-ap-northeast-2c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-014427ed60b6e5278"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:206177862976:vpc/vpc-014427ed60b6e5278",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fbe24ebdc5331ade",
            "default_route_table_id": "rtb-072c4cd4a0f3a32a2",
            "default_security_group_id": "sg-073ff0969ea36db18",
            "dhcp_options_id": "dopt-0ea27e533cfe4be32",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014427ed60b6e5278",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-072c4cd4a0f3a32a2",
            "owner_id": "206177862976",
            "tags": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc"
            },
            "tags_all": {
              "Blueprint": "ticketing-cluster",
              "Name": "ticketing-cluster-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}